Internationalize CompleteDialog messages in manager-android.

--- a/brain4it-manager/brain4it-manager-android/src/main/res/values-ca/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values-ca/strings.xml
@@ -49,6 +49,7 @@
   <string name="loadSuccessfull">Carregat correctament.</string>
   <string name="saveSuccessfull">Desat correctament.</string>
   <string name="noDashboards">Aquest mòdul no té panells!</string>
+  <string name="noMatches">No hi ha coincidències</string>
 
   <string name="threadDump">Bolcat de threads</string>
   <string name="about">Quant a</string>
