Improvements in console and editor panels of manager-android. - Hide keyboard quicker in dashboard panel. - Code complete do not shows a dialog when there is only 1 candidate. - Arrow operator preceded by space when needed. - Increase height of input EditText in console panel. - Undo/redo in editor panel. - Format code in editor panel.

--- a/brain4it-manager/brain4it-manager-android/src/main/res/values-ca/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values-ca/strings.xml
@@ -45,6 +45,7 @@
 
   <string name="update">Actualitza</string>
   <string name="parenthesis">Parèntesis</string>
+  <string name="quotes">Cometes</string>
   <string name="arrow">Fletxa</string>
   <string name="complete">Completa</string>
   <string name="functions">Funcions</string>
@@ -54,6 +55,9 @@
   <string name="execute">Executa</string>
   <string name="load">Càrrega</string>
   <string name="save">Desa</string>
+  <string name="undo">Desfer</string>
+  <string name="redo">Refer</string>
+  <string name="format">Formateja</string>
 
   <string name="enterUrl">Introdueix URL:</string>
 
