--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
@@ -44,13 +44,13 @@ Workspace.newName=Nou nom:
 RenameData.newName=Nou nom:
 
 Module.title=M\u00f2dul
-Module.name=Nom de m\u00f2dul:
+Module.name=Nom del m\u00f2dul:
 Module.accessKey=Clau d'acc\u00e9s:
 Module.icon=Icona:
 Module.description=Descripci\u00f3:
 
 Server.title=Servidor
-Server.name=Nom de servidor:
+Server.name=Nom del servidor:
 Server.url=URL:
 Server.accessKey=Clau d'acc\u00e9s:
 
@@ -94,15 +94,6 @@ Designer.value = Valor
 About.property = Propietat
 About.value = Valor
 
-ListModules.message={0} m\u00f2duls trobats.
-CreateModule.result=M\u00f2dul {0} creat.
-DestroyModule.question=Destruir m\u00f2dul {0}?
-DestroyModule.result=M\u00f2dul {0} destruit.
-RemoveNode.question=Treure {0}?
-DeleteData.question=Esborrar {0}?
-DiscardChanges=Descarta canvis a {0}?
-ConfirmSaveWorkspace=L'espai de treball s'ha modificat. Vols desar els canvis?
-
 Open=Obre
 Save=Desa
 Import=Importa
@@ -117,4 +108,22 @@ FindDialog.next=Seg\u00fcent
 FindDialog.replace=Substitueix
 FindDialog.replaceAll=Substitueix tot
 FindDialog.cancel=Cancel\u00b7la
+
+FileExistsOverwrite=El fitxer ja existeix, vols sobreescriure'l?
+LeaveBlankServerKey=(deixa en blanc per accedir amb la clau de servidor)
+ListModules.message={0} m\u00f2duls trobats.
+CreateModule.result=M\u00f2dul {0} creat.
+EditModule.result=M\u00f2dul {0} modificat.
+DestroyModule.question=Destruir m\u00f2dul {0}?
+DestroyModule.result=M\u00f2dul {0} destruit.
+RemoveNode.question=Treure {0}?
+DeleteData.question=Esborrar {0}?
+DiscardChanges=Descarta canvis a {0}?
+ConfirmSaveWorkspace=L'espai de treball s'ha modificat. Vols desar els canvis?
+ServerNameMandatory=El nom del servidor \u00e9s obligatori
+ServerURLMandatory=La URL \u00e9s obligat\u00f2ria
+ModuleNameMandatory=El nom del m\u00f2dul \u00e9s obligatori
+InvalidURL=URL inv\u00e0lida
+ImportCompleted=Importaci\u00f3 finalitzada.
+ExportCompleted=Exportaci\u00f3 finalitzada.
 
