--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
@@ -44,13 +44,13 @@ Workspace.newName=Nuevo nombre:
 RenameData.newName=Nuevo nombre:
 
 Module.title=M\u00f3dulo
-Module.name=Nombre de m\u00f3dulo:
+Module.name=Nombre del m\u00f3dulo:
 Module.accessKey=Clave de acceso:
 Module.icon=Icono:
 Module.description=Descripci\u00f3n:
 
 Server.title=Servidor
-Server.name=Nombre de servidor:
+Server.name=Nombre del servidor:
 Server.url=URL:
 Server.accessKey=Clave de acceso:
 
@@ -94,15 +94,6 @@ Designer.value = Valor
 About.property = Propiedad
 About.value = Valor
 
-ListModules.message={0} m\u00f3dulos encontrados.
-CreateModule.result=M\u00f3dulo {0} creado.
-DestroyModule.question=Destruir m\u00f3dulo {0}?
-DestroyModule.result=M\u00f3dulo {0} destruido.
-RemoveNode.question=Quitar {0}?
-DeleteData.question=Borrar {0}?
-DiscardChanges=Descartar cambios en {0}?
-ConfirmSaveWorkspace=El espacio de trabajo se ha modificado. Quieres guardar los cambios?
-
 Open=Abrir
 Save=Guardar
 Import=Importar
@@ -117,3 +108,22 @@ FindDialog.next=Siguiente
 FindDialog.replace=Reemplazar
 FindDialog.replaceAll=Reemplazar todo
 FindDialog.cancel=Cancelar
+
+FileExistsOverwrite=El fichero ya existe, quieres sobreescribirlo?
+LeaveBlankServerKey=(deja en blanco para acceder con la clave de servidor)
+ListModules.message={0} m\u00f3dulos encontrados.
+CreateModule.result=M\u00f3dulo {0} creado.
+EditModule.result=M\u00f3dulo {0} modificado.
+DestroyModule.question=Destruir m\u00f3dulo {0}?
+DestroyModule.result=M\u00f3dulo {0} destruido.
+RemoveNode.question=Quitar {0}?
+DeleteData.question=Borrar {0}?
+DiscardChanges=Descartar cambios en {0}?
+ConfirmSaveWorkspace=El espacio de trabajo se ha modificado. Quieres guardar los cambios?
+ServerNameMandatory=El nombre del servidor es obligatorio
+ServerURLMandatory=La URL es obligatoria
+ModuleNameMandatory=El nombre del m\u00f3dulo \u00e9s obligatorio
+InvalidURL=URL inv\u00e1lida
+ImportCompleted=Importaci\u00f3n finalizada.
+ExportCompleted=Exportaci\u00f3n finalizada.
+
