--- a/brain4it-manager/brain4it-manager-android/src/main/res/values-es/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values-es/strings.xml
@@ -9,6 +9,7 @@
   <string name="module">Módulo</string>
   <string name="moduleName">Nombre del módulo</string>
   <string name="accessKey">Clave de acceso</string>
+  <string name="moduleAccessKey">Clave de acceso (deja en blanco para acceder con la clave de servidor)</string>
 
   <string name="preferences">Preferencias</string>
   <string name="language">Idioma</string>
@@ -65,6 +66,10 @@
   <string name="saveSuccessfull">Guardado correctamente.</string>
   <string name="noDashboards">Este módulo no tiene paneles!</string>
   <string name="noMatches">No hay coincidencias</string>
+  <string name="serverNameMandatory">El nombre del servidor es obligatorio</string>
+  <string name="moduleNameMandatory">El nombre del módulo es obligatorio</string>
+  <string name="serverURLMandatory">La URL es obligatoria</string>
+  <string name="invalidURL">URL inválida</string>
 
   <string name="threadDump">Volcado de threads</string>
   <string name="about">Acerca de</string>
