Usability improvements in manager android. - Preserve scroll in list views. - Disable ok button while performing a server request. - Translate import module message. - Back button in dashboard, console and editor returns to module list. - Toast messages centered on screen and with black background.

--- a/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
   <string name="loadSuccessfull">Load successfull.</string>
   <string name="saveSuccessfull">Save successfull.</string>
   <string name="noDashboards">This module has no dashboards!</string>
+  <string name="importCompleted">Import completed.</string>
   <string name="noMatches">No matches</string>
   <string name="serverNameMandatory">Server name is mandatory</string>
   <string name="moduleNameMandatory">Module name is mandatory</string>
