--- a/brain4it-manager/brain4it-manager-android/src/main/res/values-es/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values-es/strings.xml
@@ -65,6 +65,7 @@
   <string name="loadSuccessfull">Cargado correctamente.</string>
   <string name="saveSuccessfull">Guardado correctamente.</string>
   <string name="noDashboards">Este módulo no tiene paneles!</string>
+  <string name="importCompleted">Importación finalizada.</string>
   <string name="noMatches">No hay coincidencias</string>
   <string name="serverNameMandatory">El nombre del servidor es obligatorio</string>
   <string name="moduleNameMandatory">El nombre del módulo es obligatorio</string>
