--- a/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
@@ -71,8 +71,8 @@
   <string name="moduleNameMandatory">Module name is mandatory</string>
   <string name="serverURLMandatory">URL is mandatory</string>
   <string name="invalidURL">Invalid URL</string>
+  <string name="threadDumpGenerated">Thread dump generated:</string>
 
   <string name="threadDump">Thread dump</string>
   <string name="about">About</string>
-  <string name="exit">Exit</string>
 </resources>
