--- a/brain4it-server/brain4it-server-android/src/main/res/values/strings.xml
+++ b/brain4it-server/brain4it-server-android/src/main/res/values/strings.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appName">Brain4it Server</string>
-    <string name="start">Start</string>
-    <string name="stop">Stop</string>
-    <string name="starting">Starting...</string>
-    <string name="stopping">Stopping...</string>
-    <string name="serverPort">Server port (1024-65535)</string>
-    <string name="accessKey">Access key</string>
-    <string name="ok">Ok</string>
-    <string name="setup">Setup</string>
-    <string name="clear">Clear log</string>
-    <string name="threadDump">Thread dump</string>
-    <string name="about">About</string>
-    <string name="restartNotice">Restart server to take effect.</string>
+  <string name="appName">Brain4it Server</string>
+  <string name="start">Start</string>
+  <string name="stop">Stop</string>
+  <string name="starting">Starting...</string>
+  <string name="stopping">Stopping...</string>
+  <string name="serverPort">Server port (1024-65535)</string>
+  <string name="accessKey">Access key</string>
+  <string name="ok">Ok</string>
+  <string name="setup">Setup</string>
+  <string name="clear">Clear log</string>
+  <string name="threadDump">Thread dump</string>
+  <string name="about">About</string>
+  <string name="restartNotice">Restart server to take effect.</string>
+  <string name="listening">Listening on</string>
+  <string name="serverStopped">Server is stopped.</string>
+  <string name="threadDumpGenerated">Thread dump generated:</string>
 </resources>
