--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
@@ -126,4 +126,6 @@ ModuleNameMandatory=El nom del m\u00f2dul \u00e9s obligatori
 InvalidURL=URL inv\u00e0lida
 ImportCompleted=Importaci\u00f3 finalitzada.
 ExportCompleted=Exportaci\u00f3 finalitzada.
+NoDashboards=Aquest m\u00f2dul no t\u00e9 panells.
+InvalidDashboardFormat=Format de panell incorrecte!
 
