--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
@@ -126,4 +126,5 @@ ModuleNameMandatory=El nombre del m\u00f3dulo \u00e9s obligatorio
 InvalidURL=URL inv\u00e1lida
 ImportCompleted=Importaci\u00f3n finalizada.
 ExportCompleted=Exportaci\u00f3n finalizada.
-
+NoDashboards=Este m\u00f3dulo no tiene paneles.
+InvalidDashboardFormat=Formato de panel incorrecto!
