--- a/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/res/values/strings.xml
@@ -64,7 +64,8 @@
 
   <string name="loadSuccessfull">Load successfull.</string>
   <string name="saveSuccessfull">Save successfull.</string>
-  <string name="noDashboards">This module has no dashboards!</string>
+  <string name="noDashboards">This module has no dashboards.</string>
+  <string name="invalidDashboardFormat">Invalid dashboard format!</string>
   <string name="importCompleted">Import completed.</string>
   <string name="noMatches">No matches</string>
   <string name="serverNameMandatory">Server name is mandatory</string>
