Add a "duplicate server" action in swing manager
It easies the process of creating a new server representation
when fields are very similar to a previous server. It opens a dialog
with the info of the existing server.

It avoids copying each field one by one using "Edit server" many times.

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
@@ -10,6 +10,8 @@ SaveWorkspaceAs=Desa espai com...
 
 EditServer=Edita servidor...
 AddServer=Afegeix servidor...
+DuplicateServer=Duplica servidor...
+DuplicatedServerSuffix=(C\u00f2pia)
 AddModule=Afegeix m\u00f2dul...
 CloseTabs=Tanca pestanyes
 RemoveNode=Treu
