--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
@@ -11,6 +11,8 @@ SaveWorkspaceAs=Guardar espacio como...
 EditServer=Editar servidor...
 AddServer=A\u00f1adir servidor...
 AddModule=A\u00f1adir m\u00f3dulo...
+DuplicateServer=Duplicar servidor...
+DuplicatedServerSuffix=(Copia)
 CloseTabs=Cerrar pesta\u00f1as
 RemoveNode=Quitar
 RefreshNode=Actualizar
