Replace "..." with ellypsis char '…' or \u2026

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
@@ -4,21 +4,21 @@ View=Veure
 Help=Ajuda
 
 NewWorkspace=Nou espai
-OpenWorkspace=Obre espai...
+OpenWorkspace=Obre espai\u2026
 SaveWorkspace=Desa espai
-SaveWorkspaceAs=Desa espai com...
+SaveWorkspaceAs=Desa espai com\u2026
 
-EditServer=Edita servidor...
-AddServer=Afegeix servidor...
-DuplicateServer=Duplica servidor...
+EditServer=Edita servidor\u2026
+AddServer=Afegeix servidor\u2026
+DuplicateServer=Duplica servidor\u2026
 DuplicatedServerSuffix=(C\u00f2pia)
-AddModule=Afegeix m\u00f2dul...
+AddModule=Afegeix m\u00f2dul\u2026
 CloseTabs=Tanca pestanyes
 RemoveNode=Treu
 RefreshNode=Actualitza
-CreateModule=Crea m\u00f2dul...
+CreateModule=Crea m\u00f2dul\u2026
 DestroyModule=Destrueix m\u00f2dul
-EditModule=Edita m\u00f2dul...
+EditModule=Edita m\u00f2dul\u2026
 ListModules=Llista m\u00f2duls
 OpenConsole=Consola
 OpenEditor=Editor
@@ -29,12 +29,12 @@ SplitHorizontal=Divisi\u00f3 horizontal
 CloseSplit=Elimina divisi\u00f3
 RenameWorkspace=Reanomena
 Documentation=Documentaci\u00f3
-Preferences=Prefer\u00e8ncies...
+Preferences=Prefer\u00e8ncies\u2026
 RenameData=Reanomena element
 DeleteData=Esborra element
-ExportModule=Exporta m\u00f2dul...
-ImportModule=Importa m\u00f2dul...
-About=Quant a...
+ExportModule=Exporta m\u00f2dul\u2026
+ImportModule=Importa m\u00f2dul\u2026
+About=Quant a\u2026
 Exit=Surt
 
 Accept=Accepta
