--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
@@ -4,21 +4,21 @@ View=Ver
 Help=Ayuda
 
 NewWorkspace=Nuevo espacio
-OpenWorkspace=Abrir espacio...
+OpenWorkspace=Abrir espacio\u2026
 SaveWorkspace=Guardar espacio
-SaveWorkspaceAs=Guardar espacio como...
+SaveWorkspaceAs=Guardar espacio como\u2026
 
-EditServer=Editar servidor...
-AddServer=A\u00f1adir servidor...
-AddModule=A\u00f1adir m\u00f3dulo...
-DuplicateServer=Duplicar servidor...
+EditServer=Editar servidor\u2026
+AddServer=A\u00f1adir servidor\u2026
+AddModule=A\u00f1adir m\u00f3dulo\u2026
+DuplicateServer=Duplicar servidor\u2026
 DuplicatedServerSuffix=(Copia)
 CloseTabs=Cerrar pesta\u00f1as
 RemoveNode=Quitar
 RefreshNode=Actualizar
-CreateModule=Crear m\u00f3dulo...
+CreateModule=Crear m\u00f3dulo\u2026
 DestroyModule=Destruir m\u00f3dulo
-EditModule=Editar m\u00f3dulo...
+EditModule=Editar m\u00f3dulo\u2026
 ListModules=Listar m\u00f3dulos
 OpenConsole=Consola
 OpenEditor=Editor
@@ -29,12 +29,12 @@ SplitHorizontal=Divisi\u00f3n horizontal
 CloseSplit=Eliminar divisi\u00f3n
 RenameWorkspace=Renombrar
 Documentation=Documentaci\u00f3n
-Preferences=Preferencias...
+Preferences=Preferencias\u2026
 RenameData=Renombrar elemento
 DeleteData=Borrar elemento
-ExportModule=Exportar m\u00f3dulo...
-ImportModule=Importar m\u00f3dulo...
-About=Acerca de...
+ExportModule=Exportar m\u00f3dulo\u2026
+ImportModule=Importar m\u00f3dulo\u2026
+About=Acerca de\u2026
 Exit=Salir
 
 Accept=Aceptar
