Add missing translations.

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_ca.properties
@@ -66,6 +66,7 @@ Editor.clear=Neteja
 Editor.undo=Desfer
 Editor.redo=Refer
 Editor.format=Formata
+Editor.find=Cerca
 Editor.path=Cam\u00ed:
 Editor.load=Carrega
 Editor.save=Desa
