--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager_es.properties
@@ -66,6 +66,7 @@ Editor.clear=Limpiar
 Editor.undo=Deshacer
 Editor.redo=Rehacer
 Editor.format=Formatear
+Editor.find=Buscar
 Editor.path=Ruta:
 Editor.load=Cargar
 Editor.save=Guardar
